--- a/Assignment_MLP/perceptrons.ipynb
+++ b/Assignment_MLP/perceptrons.ipynb
@@ -99,7 +99,7 @@
    ],
    "source": [
     "#Hand-written code without using existing libraries\n",
-    "#Dataset is suffled to get accurate results\n",
+    "#Dataset is shuffled to get accurate results\n",
     "import csv\n",
     "import random\n",
     "inputs,weights,answers=[],[],[]\n",
